buck: exopackage: remove filesystem
Summary:
^

Use `AbsPath rootPath` instead of `ProjectFilesystem`

Reviewed By: IanChilds

fbshipit-source-id: 207b99ac12f35d7d41d75b7e758fd86abccec21d